--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>John Doe - Developpeur WEB</title>
+  <title>Fresnel mbimi Andreas</title>
   <meta name="description" content="Portfolio de john doe - Développeur Web - freelance indépendant">
   <link rel="shortcut icon" href="./img/favicon.ico?v=1" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
   <header class="header">
     <div class="container d-flex">
       <div class="logo">
-        John Doe
+       Mbimi andreas
       </div>
       <nav class="navbar ">
         <ul class="menu list-unstyled">
@@ -91,14 +91,14 @@
     <div class="container">
       <div class="grid">
         <div class="hero__item left">
-          <span>Développeur Web Freelance</span>
-          <h1 class="title">Hello, Je suis John Doe de Paris</h1>
+          <span>Développeur Web </span>
+          <h1 class="title">Hello, Je suis Fresnel Mbimi Andreas de Paris</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="hero__item right">
           <div class="hero__avatar">
             <img src="./img/avatar.png" width="400" height="400" loading="lazy"
-              alt="Avatar John Doe - Développeur web freelance">
+              alt="Avatar de Fresnel Développeur web ">
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
       <div class="grid">
         <div class="grid__item">
           <img src="./img/person.jpg" width="560" height="453" loading="lazy"
-            alt="John Doe - Développeur web freelance">
+            alt="Développeur web">
         </div>
         <div class="grid__item">
           <h2 class="section-title">A propos</h2>
@@ -909,7 +909,7 @@
     <div class="container">
       <div class="grid">
         <div class="grid__item">
-          <p>Johm Doe</p>
+          <p>Fresnel Mbimi</p>
         </div>
         <div class="grid__item">
           <ul class="socials list-unstyled">
@@ -960,7 +960,7 @@
           </ul>
         </div>
         <div class="grid__item">
-          <p>Copyright © 2021 nomdusite. All Rights Reserved.</p>
+          <p>Site de Fresnel Mbimi Andreas.</p>
         </div>
       </div>
     </div>
